// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Column checkGrammar 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkGrammar 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkGrammar 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkGrammar 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkHighlight 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkHighlight 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkHighlight 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkHighlight 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkSpaces 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkSpaces 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkSpaces 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkSpaces 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column className 1`] = `
<div
  className="uu5-bricks-column my-classname uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth 5`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth 6`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column content 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Column content 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Column content 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Column content 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Column controlled 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column controlled 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column controlled 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column controlled 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column default props 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column disabled 1`] = `
<div
  className="uu5-bricks-column uu5-common-disabled uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Column disabled 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column disabled 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column disabled 4`] = `
<div
  className="uu5-bricks-column uu5-common-disabled uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Column dynamic 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column dynamic 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column dynamic 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column dynamic 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column footer 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Footer
    className={null}
    content={
      <div>
        Footer of section
      </div>
    }
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-footer"
    ignoreInnerHTML={false}
    key="uuID-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Column header 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content={
      <div>
        Header of section
      </div>
    }
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID-header"
    ignoreInnerHTML={false}
    key="uuID-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</div>
`;

exports[`UU5.Bricks.Column hidden 1`] = `
<div
  className="uu5-bricks-column uu5-common-hidden uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column hidden 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column hidden 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column hidden 4`] = `
<div
  className="uu5-bricks-column uu5-common-hidden uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column id 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column ignoreHTML 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column ignoreHTML 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column ignoreHTML 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column ignoreHTML 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column is wrapped in UU5.Bricks.Row Bootsrap grid 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Column
    className={null}
    colWidth="xs12 s3"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: yellow"
    tooltip={null}
    underline={false}
    width={null}
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID03"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      xs12 s3
    </P>
  </Column>
  <Column
    className={null}
    colWidth="xs12 s3"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: orange"
    tooltip={null}
    underline={false}
    width={null}
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID05"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      xs12 s3
    </P>
  </Column>
  <Column
    className={null}
    colWidth="xs12 s3"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID06"
    ignoreInnerHTML={false}
    key="uuID06"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: red"
    tooltip={null}
    underline={false}
    width={null}
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID07"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
       xs12 s3
    </P>
  </Column>
  <Column
    className={null}
    colWidth="xs12 s3"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID08"
    ignoreInnerHTML={false}
    key="uuID08"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: pink"
    tooltip={null}
    underline={false}
    width={null}
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID09"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      xs12 s3
    </P>
  </Column>
</div>
`;

exports[`UU5.Bricks.Column is wrapped in UU5.Bricks.Row column is set with width 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Column
    className={null}
    colWidth={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: yellow"
    tooltip={null}
    underline={false}
    width="20%"
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID03"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      20% Column
    </P>
  </Column>
  <Column
    className={null}
    colWidth={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: orange"
    tooltip={null}
    underline={false}
    width="200px"
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID05"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      100px Column
    </P>
  </Column>
  <Column
    className={null}
    colWidth={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID06"
    ignoreInnerHTML={false}
    key="uuID06"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: red"
    tooltip={null}
    underline={false}
    width="10em"
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID07"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      10em Column
    </P>
  </Column>
  <Column
    className={null}
    colWidth={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID08"
    ignoreInnerHTML={false}
    key="uuID08"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style="backgroundColor: pink"
    tooltip={null}
    underline={false}
    width="10cm"
  >
    <P
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID09"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      10cm Column
    </P>
  </Column>
</div>
`;

exports[`UU5.Bricks.Column level 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 5`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 6`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 7`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 8`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 9`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 10`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 11`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 12`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 13`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 14`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 15`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 16`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 17`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 18`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 19`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 20`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 21`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 22`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 23`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 24`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 25`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 26`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 27`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level 28`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column mainAttrs 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column name 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 5`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 6`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 7`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 8`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 9`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 10`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 11`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 12`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 13`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 14`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 15`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 16`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Column nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Column nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Column nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Column noIndex 1`] = `
<div
  className="uu5-bricks-column uu5-noindex uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noIndex 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noIndex 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noIndex 4`] = `
<div
  className="uu5-bricks-column uu5-noindex uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noSpacing 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-nospacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noSpacing 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noSpacing 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noSpacing 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-nospacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column pureRender 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column pureRender 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column pureRender 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column pureRender 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column selected 1`] = `
<div
  className="uu5-bricks-column uu5-common-selected uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column selected 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column selected 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column selected 4`] = `
<div
  className="uu5-bricks-column uu5-common-selected uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column style 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column style 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column style 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column style 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column textCorrector 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column textCorrector 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column textCorrector 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column textCorrector 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column tooltip 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Column underline 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column underline 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column underline 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column underline 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "200px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 2`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "30%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 3`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "30%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 4`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "10em",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 5`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "10em",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 6`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": 200,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 7`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": 200,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width 8`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "10em",
    }
  }
  title={null}
/>
`;
